--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "One host only, redirect other hosts to bind host.",
   "main": "./index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make test-all",
+    "blanket": { "pattern": "onehost/lib" },
+    "travis-cov": { "threshold": 100 }
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,10 @@
     "should": "*",
     "mocha": "*",
     "supertest": "*",
-    "visionmedia-jscoverage": "*",
+    "blanket": "*",
+    "travis-cov": "*",
+    "coveralls": "*",
+    "mocha-lcov-reporter": "*",
     "connect": "*"
   },
   "author": "fengmk2 <fengmk2@gmail.com> (http://fengmk2.github.com/)",
